# scalarp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md
app/: .eslintrc.js  gulpfile.js  package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: Actions.jsx  App.jsx  bootstrap-config.json  index.js
app/src/__tests__/: scalarp.jsx
app/src/assets/: manifest.json  window.html
app/src/components/: CharacterInfo.jsx  Header.jsx  Home.jsx  LoginForm.jsx  Manager.jsx
app/src/containers/: ReduxHeader.jsx  ReduxManager.jsx
app/src/js/: App.jsx  Reducers.jsx  main.jsx
app/src/js/component/: CharacterInfo.jsx  Header.jsx  Home.jsx  LoginForm.jsx  Manager.jsx  app.jsx
app/src/js/container/: ReduxHeader.jsx  ReduxManager.jsx
app/src/js/model/: Character.jsx  Login.jsx
app/src/model/: Character.jsx  Login.jsx
app/src/test/: scalarp.jsx
nfc_read/: CMakeLists.txt  Readme.md
nfc_read/cmake/modules/: FindLibNFC.cmake
nfc_read/include/: nfc_exception.h  nfc_json.h  nfc_reader.h  nfc_tag.h  nfc_tag_mifare.h  scalarp.h
nfc_read/src/: main.cpp  nfc_json.cpp  nfc_reader.cpp  nfc_tag_mifare.cpp
src/: piak.cpp
